# posttrainarena

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  SUPPORT.md
.github/: pull_request_template.md
.github/workflows/: benchflow-posttrain-pipeline.yml  tasks-check.yml
docs/: README.md  architecture-status.md  hf-jobs-validation.md  hf-jobs.md  native-dataset-openenv-smoke.md  opencode-evaluation-canary.md  opencode-grpo-smoke.md  opencode-grpo.md  qwen35-data-agent-e2e-canary.md  qwen35-opencode-teacher-canary.md  training-pipeline.md
pipelines/benchflow-task-posttrain/: README.md  pyproject.toml
pipelines/benchflow-task-posttrain/configs/: multi-benchmark-smoke.toml  qwen3-4b-data-agent-forced-grpo-smoke.toml  qwen3-4b-data-agent-openenv-smoke.toml  qwen3-4b-data-agent-smoke.toml  qwen3-4b-hf-job-smoke.toml  qwen3-4b-skillsbench-e2e-smoke.toml  qwen3.5-9b-data-agent-canary.toml  qwen3.5-9b-data-agent-full.toml  qwen3.5-9b-data-agent-soccer-canary.toml
pipelines/benchflow-task-posttrain/scripts/: bootstrap_gpu.sh
pipelines/benchflow-task-posttrain/src/posttrainarena/: __init__.py
pipelines/benchflow-task-posttrain/src/posttrainarena/benchflow_pipeline/: __init__.py  benchmarks.py  cli.py  config.py  grpo.py  hf_jobs.py  integrations.py  io.py  layout.py  leaderboard.py  model_bridge.py  opencode.py  openenv_service.py  pipeline.py  policy.py  publishing.py  sft.py  submission.py  teacher.py  vllm_server.py
pipelines/benchflow-task-posttrain/src/posttrainarena/benchflow_pipeline/jobs/: __init__.py  run_hf_job.py
pipelines/benchflow-task-posttrain/src/posttrainarena/benchflow_pipeline/openenv/: __init__.py  client.py  models.py  server.py  tool_env.py
pipelines/benchflow-task-posttrain/task-lists/: data-agent-eval-1.txt  data-agent-eval-2.txt  data-agent-eval-all.txt  data-agent-soccer-eval-3.txt  data-agent-soccer-train-8.txt  data-agent-train-1.txt  data-agent-train-15.txt  data-agent-train-all.txt  skillsbench-citation-eval-1.txt  skillsbench-eval-1.txt
pipelines/benchflow-task-posttrain/tests/: test_benchmarks.py  test_bootstrap_gpu.py  test_cli.py  test_config.py  test_grpo.py  test_grpo_model.py  test_hf_jobs.py  test_io.py  test_leaderboard.py  test_model_bridge.py  test_opencode.py  test_pipeline.py  test_policy.py  test_publishing.py  test_sft.py  test_submission.py  test_teacher.py  test_vllm_server.py
pipelines/benchflow-task-posttrain/tests/openenv/: test_protocol.py
scripts/: check_submission.py  check_task.py  run_local.sh
starting-kit/: README.md
starting-kit/examples/shift-schedule-verify/: task.md
starting-kit/examples/skillsbench-3d-scan-calc/: task.md
starting-kit/template/: task.md
submissions/: README.md
tasks/: README.md
tasks/dogfood-hello-text/: task.md
tasks/dogfood-hello-text/environment/: Dockerfile
tasks/dogfood-hello-text/verifier/: test.sh  verifier.md
tasks/seclog-bruteforce-triage/: task.md
tasks/seclog-bruteforce-triage/verifier/: test_outputs.py
tasks/sensor-calibration-fit/: task.md
tasks/sensor-calibration-fit/environment/: Dockerfile
tasks/sensor-calibration-fit/oracle/: solve.sh
tasks/sensor-calibration-fit/verifier/: test.sh  test_outputs.py
tasks/shift-schedule-verify/environment/: broken_schedule.json  instance.json
tasks/shift-schedule-verify/verifier/: verifier.md
tasks/skillsbench-3d-scan-calc/oracle/: solve.sh
tasks/skillsbench-3d-scan-calc/verifier/: test.sh  verifier.md
tasks/skillsbench-citation-check/: task.md
tasks/skillsbench-citation-check/verifier/: test.sh  test_outputs.py  verifier.md
tasks/skillsbench-weighted-gdp-calc/: task.md
tasks/subtitle-overlap-qc/: task.md
(+45 files in other folders)
