[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "posttrainarena-benchflow-pipeline"
version = "0.1.0"
description = "Task-list driven SFT and GRPO pipeline for BenchFlow environments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
dependencies = []

[project.urls]
Homepage = "https://posttrain.com"
Repository = "https://github.com/benchflow-ai/posttrainarena"
Issues = "https://github.com/benchflow-ai/posttrainarena/issues"
Documentation = "https://github.com/benchflow-ai/posttrainarena/blob/main/docs/training-pipeline.md"

[project.optional-dependencies]
train = [
  "benchflow[trl,sandbox-daytona] @ git+https://github.com/benchflow-ai/benchflow.git@cbc295464e62aa39f84e0daa675aa939c0e72f00",
  "openenv @ git+https://github.com/huggingface/OpenEnv.git@6823135a714814e3efb3e39c4a9edff01e1a2a98",
  "openai>=2.0",
  "peft>=0.19,<0.20",
  "torch==2.11.0; sys_platform == 'linux'",
  "transformers>=5.6,<5.14",
  "trl==1.8.0",
  "vllm>=0.20.0,<=0.23.0; sys_platform == 'linux'",
  "wandb>=0.25,<0.26",
]
hf = [
  "huggingface_hub>=0.36,<2",
  "tomli-w>=1.2,<2",
]
test = [
  "benchflow[trl] @ git+https://github.com/benchflow-ai/benchflow.git@cbc295464e62aa39f84e0daa675aa939c0e72f00",
  "huggingface_hub>=0.36,<2",
  "openenv @ git+https://github.com/huggingface/OpenEnv.git@6823135a714814e3efb3e39c4a9edff01e1a2a98",
  "peft>=0.19,<0.20",
  "pytest>=8.0",
  "tomli-w>=1.2,<2",
  "transformers>=5.6,<5.14",
  "trl==1.8.0",
]

[project.scripts]
posttrainarena-train = "posttrainarena.benchflow_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/posttrainarena"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
